<!--
  ~ Copyright (c) 2023-2025 Mariano Barcia
  ~
  ~ Licensed under the Apache License, Version 2.0 (the "License");
  ~ you may not use this file except in compliance with the License.
  ~ You may obtain a copy of the License at
  ~
  ~     http://www.apache.org/licenses/LICENSE-2.0
  ~
  ~ Unless required by applicable law or agreed to in writing, software
  ~ distributed under the License is distributed on an "AS IS" BASIS,
  ~ WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
  ~ See the License for the specific language governing permissions and
  ~ limitations under the License.
  -->

<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 https://maven.apache.org/xsd/maven-4.0.0.xsd">
    <modelVersion>4.0.0</modelVersion>
    <groupId>org.pipelineframework</groupId>
    <artifactId>csv-payments-parent</artifactId>
    <version>1.0.0</version>
    <packaging>pom</packaging>
    <name>CSV Payments</name>

    <modules>
        <module>common</module>
        <module>input-csv-file-processing-svc</module>
        <module>payments-processing-svc</module>
        <module>payment-status-svc</module>
        <module>output-csv-file-processing-svc</module>
        <module>orchestrator-svc</module>
    </modules>

    <properties>
        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
        <maven.compiler.source>21</maven.compiler.source>
        <maven.compiler.target>21</maven.compiler.target>
        <enablePreview>true</enablePreview>
        <quarkus.platform.version>3.28.5</quarkus.platform.version>
        <quarkus.platform.group-id>io.quarkus.platform</quarkus.platform.group-id>
        <quarkus.platform.artifact-id>quarkus-bom</quarkus.platform.artifact-id>
        <protobuf.version>4.28.2</protobuf.version>
        <grpc.version>1.63.0</grpc.version>
        <version.jandex>3.5.0</version.jandex>
        <pipeline.version>${pipeline.framework.version}</pipeline.version>
        <pipeline.framework.version>0.9.0</pipeline.framework.version>
        <spotless.plugin.version>2.44.0</spotless.plugin.version>
        <google-java-format.version>1.25.0</google-java-format.version>
    </properties>

    <dependencyManagement>
        <dependencies>
            <!-- Quarkus BOM -->
            <dependency>
                <groupId>${quarkus.platform.group-id}</groupId>
                <artifactId>${quarkus.platform.artifact-id}</artifactId>
                <version>${quarkus.platform.version}</version>
                <type>pom</type>
                <scope>import</scope>
            </dependency>
            <!-- Pipeline Framework BOM -->
            <dependency>
                <groupId>org.pipelineframework</groupId>
                <artifactId>framework-parent</artifactId>
                <version>${pipeline.version}</version>
                <type>pom</type>
                <scope>import</scope>
            </dependency>
        </dependencies>
    </dependencyManagement>

    <build>
        <pluginManagement>
            <plugins>
                <plugin>
                    <groupId>org.apache.maven.plugins</groupId>
                    <artifactId>maven-compiler-plugin</artifactId>
                    <version>3.14.0</version>
                    <executions>
                        <!-- Normal compile -->
                        <execution>
                            <id>default-compile</id>
                            <phase>compile</phase>
                            <goals><goal>compile</goal></goals>
                        </execution>
                    </executions>
                    <configuration>
                        <source>21</source>
                        <target>21</target>
                        <annotationProcessorPaths>
                            <!-- lombok must come first -->
                            <path>
                                <groupId>org.projectlombok</groupId>
                                <artifactId>lombok</artifactId>
                                <version>1.18.36</version>
                            </path>
                            <path>
                                <groupId>org.mapstruct</groupId>
                                <artifactId>mapstruct-processor</artifactId>
                                <version>1.5.5.Final</version>
                            </path>
                            <path>
                                <groupId>io.quarkus</groupId>
                                <artifactId>quarkus-extension-processor</artifactId>
                                <version>${quarkus.platform.version}</version>
                            </path>
                            <path>
                                <groupId>org.pipelineframework</groupId>
                                <artifactId>pipelineframework-deployment</artifactId>
                                <version>${pipeline.version}</version>
                            </path>
                        </annotationProcessorPaths>
                        <compilerArgs>
                            <arg>--enable-preview</arg>
                        </compilerArgs>
                    </configuration>
                </plugin>
                <!-- 
                The annotation processor automatically handles generation of gRPC services and client steps 
                based on the @PipelineStep annotation. Generation type (client vs server) is determined by 
                the pipeline.generate-cli property. -->
                <plugin>
                    <groupId>io.quarkus</groupId>
                    <artifactId>quarkus-maven-plugin</artifactId>
                    <version>${quarkus.platform.version}</version>
                    <configuration>
                        <jvmArgs>--enable-preview</jvmArgs>
                        <sourceDir>${project.build.directory}/generated-sources/annotations</sourceDir>
                    </configuration>
                    <executions>
                        <execution>
                            <goals>
                                <goal>build</goal>
                                <goal>generate-code</goal>
                                <goal>generate-code-tests</goal>
                            </goals>
                        </execution>
                    </executions>
                </plugin>
                <plugin>
                    <groupId>org.apache.maven.plugins</groupId>
                    <artifactId>maven-surefire-plugin</artifactId>
                    <version>3.5.1</version>
                    <dependencies>
                        <dependency>
                            <groupId>org.ow2.asm</groupId>
                            <artifactId>asm</artifactId>
                            <version>9.5</version>
                        </dependency>
                    </dependencies>
                    <configuration>
                        <useSystemClassLoader>true</useSystemClassLoader>
                        <forkCount>1</forkCount>
                        <reuseForks>true</reuseForks>
                        <systemPropertyVariables>
                            <java.util.logging.manager>org.jboss.logmanager.LogManager</java.util.logging.manager>
                        </systemPropertyVariables>
                        <argLine>--enable-preview -XX:+EnableDynamicAgentLoading</argLine>
                    </configuration>
                </plugin>
                <plugin>
                    <groupId>com.diffplug.spotless</groupId>
                    <artifactId>spotless-maven-plugin</artifactId>
                    <version>${spotless.plugin.version}</version>
                    <configuration>
                        <java>
                            <googleJavaFormat>
                                <version>${google-java-format.version}</version>
                                <style>AOSP</style>
                            </googleJavaFormat>
                            <removeUnusedImports/>
                        </java>
                        <formats>
                            <format>
                                <includes>
                                    <include>src/main/**/*.java</include>
                                    <include>jbang/*.java</include>
                                </includes>
                            </format>
                        </formats>
                    </configuration>
                    <executions>
                        <execution>
                            <!-- Runs in compile phase to fail fast in case of formatting issues.-->
                            <id>spotless-check</id>
                            <phase>package</phase>
                            <goals>
                                <goal>check</goal>
                            </goals>
                        </execution>
                    </executions>
                </plugin>
                <plugin>
                    <groupId>org.apache.maven.plugins</groupId>
                    <artifactId>maven-failsafe-plugin</artifactId>
                    <version>3.5.1</version>
                    <configuration>
                        <argLine>--enable-preview</argLine>
                    </configuration>
                    <executions>
                        <execution>
                            <goals>
                                <goal>integration-test</goal>
                                <goal>verify</goal>
                            </goals>
                        </execution>
                    </executions>
                </plugin>
                <plugin>
                    <groupId>io.smallrye</groupId>
                    <artifactId>jandex-maven-plugin</artifactId>
                    <version>${version.jandex}</version>
                    <executions>
                        <execution>
                            <id>make-index</id>
                            <goals>
                                <goal>jandex</goal>
                            </goals>
                        </execution>
                    </executions>
                </plugin>
            </plugins>
        </pluginManagement>
    </build>

    <profiles>
        <profile>
            <id>native</id>
            <properties>
                <quarkus.native.enabled>true</quarkus.native.enabled>
                <skipITs>false</skipITs>
            </properties>
        </profile>
        <profile>
            <id>skip-tests</id>
            <build>
                <plugins>
                    <plugin>
                        <groupId>org.apache.maven.plugins</groupId>
                        <artifactId>maven-surefire-plugin</artifactId>
                        <configuration>
                            <skipTests>true</skipTests>
                        </configuration>
                    </plugin>
                    <plugin>
                        <groupId>org.apache.maven.plugins</groupId>
                        <artifactId>maven-failsafe-plugin</artifactId>
                        <configuration>
                            <skipTests>true</skipTests>
                        </configuration>
                    </plugin>
                </plugins>
            </build>
        </profile>
    </profiles>

</project>
